# django-liberty

./: .pre-commit-config.yaml  LICENSE  README.md
django-liberty/: docker-compose.yaml
django-liberty/backend/src/account/: views.py
django-liberty/backend/src/account/templates/: login.html  signup.html
django-liberty/backend/src/main/management/commands/: import_oidc_config.py
django-liberty/backend/src/main/settings/: base.py
django-liberty/frontend-next/src/: pnpm-lock.yaml
django-liberty/frontend-next/src/app/: page.tsx
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: docker-compose.yaml
{{cookiecutter.project_slug}}/backend/: Dockerfile  entrypoint.sh  pyproject.toml
{{cookiecutter.project_slug}}/backend/src/: entrypoint.sh
{{cookiecutter.project_slug}}/backend/src/account/: urls.py
{{cookiecutter.project_slug}}/backend/src/account/templates/registration/: login.html
{{cookiecutter.project_slug}}/backend/src/main/management/commands/: import_oidc_config.py
{{cookiecutter.project_slug}}/backend/src/main/settings/: base.py
{{cookiecutter.project_slug}}/frontend-next/: Dockerfile
{{cookiecutter.project_slug}}/frontend-next/src/: package.json
