[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Rodrigo Cortez"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.9"
django = "^5.1.7"
django-unfold = "0.51.0"
psycopg = { extras = ["binary"], version = "^3.2.5" }
djangorestframework = "^3.15.2"
drf-spectacular = "^0.28.0"
gunicorn = "^22.0.0"
whitenoise = "^6.9.0"
django-oidc-provider = "^0.8.3"
django-ninja = "^0.17.0"

[tool.ruff]
fix = true
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]
exclude = ["/*/migrations/**"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
